fixing logo alignment

--- a/process/sass/partials/_nav.scss
+++ b/process/sass/partials/_nav.scss
@@ -50,7 +50,7 @@
 			height: 36px;
 			display: block;
 			position: relative;
-            background: url(../images/combination-mark-white.svg) -3px 0px;
+            background: url(../images/combination-mark-white.svg) 0px 0px;
 			background-size: auto 100%;
 			background-repeat: no-repeat;
 
@@ -60,6 +60,7 @@
 
 		  	@media screen and (max-width: $break-small) {
 		  		width: 20px;
+                background-position: -3px 0px;
 		  	}
 		}
 	}
